# Fantasy_Strategy_Sandbox

./: README.md  main.py  pyproject.toml
data/encounters/: training-yard-skirmish.json
data/maps/: training-yard.json
doc/: dnd-rules.md  ideas.md
doc/architecture/: content-and-map-format.md  implementation-readiness.md  isometric-projection-and-interaction.md  rendering-architecture.md  runtime-modes.md  system-overview.md  turn-based-combat-flow.md  world-and-combat-model.md
src/fantasy_strategy_sandbox/: __init__.py
src/fantasy_strategy_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fantasy_strategy_sandbox/app/: cli.py  demo.py  runtime.py
src/fantasy_strategy_sandbox/combat/: __init__.py  models.py  turn_engine.py
src/fantasy_strategy_sandbox/content/: __init__.py  loaders.py
src/fantasy_strategy_sandbox/queries/: __init__.py  movement.py
src/fantasy_strategy_sandbox/render/: __init__.py  projection.py  viewer.py
src/fantasy_strategy_sandbox/world/: __init__.py  models.py
tests/: test_content_loaders.py  test_demo_runtime.py  test_render_projection.py  test_runtime.py  test_viewer_state_visualization.py
